add: api权限管理功能
